syntax = "proto3";

option csharp_namespace = "CampaignService";

package auth;

service Auth {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  string email = 3;
  string full_name = 4;
  string error_message = 5;
}
